# mastodon-bot

./: .gitignore  Dockerfile  README.md  bug_fix  pyproject.toml  setup.py  voices.json
.github/workflows/: docker-image.yml
deploy/: kubernetes_cronjob.yaml  kubernetes_deployment.yaml  kubernetes_deployment_img.yaml
requirements/: requirements.txt  requirements_dev.txt
src/: __init__.py  app.py  bot.py  constants.py  util.py
src/commands/: __init__.py  init.py  listen.py  post.py
src/mastodon_bot/: app.py  markdown.py  redis_timed_dict.py  timed_dict.py  util.py  worker.py
src/mastodon_bot/commands/: __init__.py  get.py  init.py  listen.py  post.py
src/mastodon_bot/commands/_listen/: listener_config.py  listener_response_type.py
src/mastodon_bot/lib/listen/: listener_config.py  listener_response_type.py
src/mastodon_bot/lib/polly/: prepare.py  speech.py
src/mastodon_bot/lib/rq/: job_status.py  polly_task_status.py
src/mastodon_bot/lib/work/: work_audio.py
src/mastodon_bot/style/: unroll.css
test/: test_get.py  test_polly.py  test_template.py  test_util.py  test_worker.py
