[tool.poetry]
name = "mastodon-bot-cli"
version = "0.8.5"
description = "mastodon-bot is a cli app that uses various commands to interact with a mastodon instance and openai endpoints"
license = "LICENSE"
authors = ["Robert Evans <robermar2@gmail.com>"]
readme = "README.md"
classifiers=[
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Beta",
]
packages = [{include = "mastodon_bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "8.1.3"
requests = "2.28.1"
rich = "13.0.0"
"Mastodon.py" = "1.8.1"
dropbox = "11.36.0"
beautifulsoup4 = "4.11.1"
openai = "0.27.2"
pillow = "9.4.0"
plexapi = "4.13.2"
cryptography = "3.3.2"
tiktoken = "0.3.2"
redis = "4.6.0"
rq = "1.15.1"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
coverage = "5.5"
pylint = "2.7.2"

[tool.poetry.scripts]
mastodonbotcli = "mastodon_bot.app:cli"

[project.urls]
homepage = "https://github.com/robermar23/mastodon-bot"
repository = "https://github.com/robermar23/mastodon-bot"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0", 
    "wheel", 
    "click==8.1.3", 
    "requests==2.28.1",
    "rich==13.0.0",
    "Mastodon.py==1.8.0",
    "dropbox==11.36.0",
    "beautifulsoup4==4.11.1",
    "openai==0.27.2",
    "pillow==9.4.0",
    "plexapi==4.13.2",
    "cryptography==3.3.2",
    "tiktoken==0.3.2"
]